# Antigravity-Tools-LS

./: README.md  README_ZH.md
.github/workflows/: docker-publish.yml  release.yml
apps/cli-server/src/: lib.rs
apps/cli-server/src/handlers/: chat.rs  mod.rs  probes.rs  settings.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
apps/web-dashboard/: package-lock.json  package.json  vite.config.js
apps/web-dashboard/src/api/: client.js  runtime.js  runtime.test.mjs
apps/web-dashboard/src/api/services/: settings.js
apps/web-dashboard/src/components/: AddAccountModal.jsx
apps/web-dashboard/src/locales/: en.json  zh.json
apps/web-dashboard/src/pages/: Accounts.jsx  Integration.jsx  Monitor.jsx  Settings.jsx  settingsDraftState.js  settingsDraftState.test.mjs
apps/web-dashboard/src/store/: useSettingsStore.js
ls-orchestrator/src/: extension_server.rs  native.rs
transcoder-core/src/: gemini.rs
transcoder-core/src/cascade/: client.rs
transcoder-core/src/mappers/: gemini.rs
