[package]
name = "antigravity_tools_ls"
version = "0.0.2"
description = "Antigravity Tools LS Desktop"
authors = ["Antigravity Team"]
edition = "2021"

[lib]
name = "antigravity_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1.37", features = ["full"] }
cli-server = { path = "../../cli-server" }
transcoder-core = { path = "../../../transcoder-core" }
